don't hide overflow content when a page contains multiple pages: https://github.com/rstudio/pagedown/issues/299#issuecomment-2568118387

--- a/css/pages.css
+++ b/css/pages.css
@@ -39,12 +39,14 @@
   .pagesjs-page {
     width: var(--paper-width);
     height: var(--paper-height);
-    overflow: hidden;
     padding: var(--paper-margin-top) var(--paper-margin-right) var(--paper-margin-bottom) var(--paper-margin-left);
   	page-break-after: always;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    &:not(.page-multiple) {
+      overflow: hidden;
+    }
     img {
       max-width: 100%;
     }
